<resources>
    <string name="app_name">UT3Villacastin</string>
    <string name="alorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">ALorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="hello">Hello</string>
    <string name="john">John</string>
    <string name="search_elements">Search Elements</string>
    <string name="games">Games</string>
    <string name="contacts">Contacts</string>
    <string name="health">Health</string>
    <string name="maps">Maps</string>
    <string name="trending">TRENDING</string>
    <string name="dummy_text">Alorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
</resources>